--- a/Main.css
+++ b/Main.css
@@ -46,7 +46,7 @@ span{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 100;
+  z-index: 2;
 }
 
 .logo {
@@ -303,6 +303,7 @@ span{
   color: var(--cor-de-fundo-secundaria);
 }
 
+
 .contato h2{
   margin-bottom: 3rem;
 }
@@ -382,6 +383,10 @@ span{
   html{
     font-size: 55%;
   }
+
+  .contato{
+    min-height: auto;
+  }
 }
 
 @media (max-width: 991px){
@@ -393,9 +398,30 @@ span{
     padding: 10rem 3% 2rem;
   }
 
+  .experiencias{
+    padding-left: 5rem;
+  }
+
+  .exp{
+    padding-bottom: 7rem;
+  }
+
+  .portfolio{
+    padding-right: 2rem;
+    padding-bottom: 7rem;
+  }
+  .portfolio-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .portfolio-box img{
+    width: 47vw;
+  }
+
   .footer{
     padding: 2rem 3%;
   }
+
 }
 
 @media (max-width: 768px){
@@ -423,5 +449,85 @@ span{
     display: block;
     font-size: 2rem;
     margin: 3rem 0;
+  }
+
+  .home{
+    flex-direction: column;
+  }
+
+  .home-content h3 {
+    font-size: 2.6rem;
+  }
+
+  .home-content h1{
+    font-size: 5rem;
+  }
+
+  .sobre{
+    flex-direction: column;
+  }
+
+  .sobre img{
+    width: 60vw;
+  }
+
+  .exp h2{
+    margin-bottom: 3rem;
+  }
+
+  .experiencias{
+    padding-left: 5rem;
+  }
+  .portfolio{
+      padding-right: 4rem;
+  }
+
+  .portfolio h2 {
+    margin-bottom: 3rem;
+  }
+
+  .portfolio-box img{
+    width: 100vw;
+  }
+
+  .portfolio-container {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 4rem;
+  }
+
+  .contato{
+    padding-right: 3.5rem;
+  }
+}
+
+@media (max-width: 450px){
+  html{
+    font-size: 50%;
+  }
+
+  .experiencias{
+    padding-right: 3.5rem;
+    padding-bottom: 7rem; 
+  }
+
+  .portfolio{
+    padding-right: 3.5rem;
+    padding-bottom: 7rem;
+  }
+
+  .portfolio-layer h2{
+    font-size: 1.3rem;
+  }
+
+  .portfolio-layer p{
+    font-size: 1.3rem;
+  }
+
+  .contato{
+    padding-right: 3.5rem;
+  }
+
+  .contato form .input-box input{
+    width: 100%;
   }
 }
