--- a/Main.css
+++ b/Main.css
@@ -268,6 +268,7 @@ span{
   border: .2rem solid var(--cor-de-fundo);
   transition: .5s ease;
   -webkit-user-select: none;
+  user-select: none;
 }
 
 .ctf-box i {
