--- a/Main.css
+++ b/Main.css
@@ -50,6 +50,13 @@ span{
   color: var(--cor-principal);
 }
 
+.ctf-box .breve{
+  width: 80px; 
+  color: red; 
+  border: 5px solid red; 
+  border-radius: 10%;
+}
+
 .header {
   position: fixed;
   top: 0%;
